v1.3.1 - TBD
  No longer changes Music Box track instrument when you set notes.
   - Change track instrument by clicking the instrument button beside each track.
  Added a config option to control blending effects in certain machines.
  Added Gem Converter advancements.
For Minecraft 1.14 and 1.15 versions Only:
  Fix warnings in console log relating to inaccessible block loot table entries.
   - Also fixes not being able to silk-touch Gem Ore blocks.
  Fixed: Gem Ores now drop experience again.
  Fix description for Void Crystal advancement not being translated.
  Fixed problems using the Music Sheet on certain sides of the Music Box.



v1.3 - July 1, 2020
  ADDSynth Energy is now its own mod.
   - Moved Power Core, Advanced Power Core, Energy Wire, Energy Storage Container,
     Electric Furnace, Compressor, and Universal Energy Interface.
   - As a result, some of the recipes for these have changed.
   - This means that your previous worlds will be incompatible if you upgrade to this
      version. Forge will warn you that some blocks and items are missing.
  Moved config options that specifically alter Machine values into a dedicated
    MachineValues config file.
  New Portal Control Panel texture.
  Advanced Ore Refinery now has its own texture.
  Black Hole Optimization:
   - No longer erases blocks in a single tick, causing lag. Black Hole algorithm
     is now spread across multiple ticks, and also self-balancing, meaning it will
     never go over the tick processing limit.
   - As a result of this, the default radius has been increased from 70 to 90.
  Now prints a message to Players if you try to set down a Black Hole in a Dmension
    that is blacklisted in the Overpowered configuration file.
  The Identifier now has an output slot, allowing it to be automated.
  New: Added Energy Suspension Bridge.
   - A new machine that will spawn an energy bridge if it finds another Energy