@@ -22,7 +22,7 @@ public final class GuiCompressor extends GuiEnergyBase<TileCompressor, Container
   }
 
   @Override
-  protected final void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY){
+  protected final void drawGuiContainerBackgroundLayer(final float partialTicks, final int mouseX, final int mouseY){
     draw_background_texture();
     
     final float work_float = tile.getWorkTimePercentage();
@@ -31,12 +31,11 @@ public final class GuiCompressor extends GuiEnergyBase<TileCompressor, Container
   }
 
   @Override
-  protected final void drawGuiContainerForegroundLayer(int mouseX, int mouseY){
+  protected final void drawGuiContainerForegroundLayer(final int mouseX, final int mouseY){
     super.draw_title();
     draw_energy_usage();
     draw_status(tile.getStatus());
-    drawItemStack(tile.getWorkingInventory().getStackInSlot(0), 79, 41);
-    drawItemStack(tile.getWorkingInventory().getStackInSlot(1), 96, 41);
+    drawItemStack(tile.getWorkingInventory().getStackInSlot(0), 80, 42);
     draw_text_center(work_percentage + "%", center_x, work_percentage_text_y);
     draw_time_left(tile, time_left_y);
   }
